added color to nav links on hover

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ img{
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #fff;
+  color: #2da2c8;
 }
 
 /*--------/menu_area-------- */
